style.css
body, div, h1, h2, h3, h4, h5, h6, p, ul, img {margin:0px; padding:0px; }
body{
  font-family:Arial, Helvetica, sand-serif;
  background-color: #a7a7a7;
}
.container{
  width:800px;
  margin: 0 auto;
}
#main{
  background: url(photoshop/slices/images/website_layout_01_header.jpg) repeat-x;
}
#logo{
  background:url(photoshop/slices/images/website_layout_09_logo.png) no-repeat;
  height:83px;
  width:351px;
}
#logo h1{
  text-indent: -9999px;
}
#header{
  padding-top: 80px;
}
#tagline{
  float: left;
  padding-top: 20px;
  padding-left: 20px;
}
#tagline h3{
  font-size: 30px;
  color:#e4dfdf;
}
ul#menu {
  list-style: none;
  padding-top: 35px;
  padding-bottom: 50px;
}
ul#menu li a {
  font-size: 30px;
  color: #676666;
  text-decoration: none;
}
ul#menu li{
  float: left;
  width: 95px;
  padding-right: 105px;
}
#content{
  width: 510px;
  float: left;
}
#sidebar{
  float: left;
}
#content h2 {
  font-size: 30px;
  color: #f41e06;
  padding-top: 25px;
}
#content h3 {
  font-size: 24px;
  color: #fdf7dd;
  padding-top: 20px;
  padding-bottom: 20px;
}
#content h4 {
  font-size: 18px;
  color: #595959;
  font-weight: normal;
}
#content p {
  font-size: 14px;
  color: #595959;
  padding-top: 20px;
}
#content small {
  font-size: 12px;
  color: #373737;
}

#content a {
  color: #0f6c8d;
  font-weight: bold;
  text-decoration: none;
}
#news{
  padding-top: 10px;
}
#news h3{
  padding-top: 10px;
}
#news p{
  padding-top: 10px;
  padding-bottom: 14px;
}
#sidebar{
  float: left;
  margin-left: 55px;
  margin-top: 35px;
  background: #cccccc;
  box-shadow: 1px 1px 5px #595959;
  border-radius: 10px;
  padding: 15px 15px 30px 15px;
}
#sidebar h3{
  font-size: 24px;
  color: #595959;
  font-weight: normal;
  padding-bottom: 20px;
  padding-left: 15px;
}
#sidebar ul{
  list-style: none;
  padding-bottom: 25px
}
#sidebar ul li a{
  font-size: 14px;
  color: #595959;
}
ul#subscribe li {
  padding-bottom: 5px;
}
ul#subscribe li a{
  font-size: 18px;
}
a.button{
  color: #150b6c;
  text-decoration: none;
  background: url(photoshop/slices/images/website_layout_14_button.jpg) repeat-x;
  margin-left: 14px;
  padding: 13px 23px;
}
#footer {
  background: url(photoshop/slices/images/website_layout_20_footer.jpg) repeat-x;
  padding-top: 20px;
  padding-bottom: 60px;
  margin-top: 40px;
  color: #fdf7dd;
}
img.headimage{
  align: center;
}

